tests/snapshots/examples_fixtures/errors__empty_match_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/empty_match_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E014]: EMPTY MATCH

Match expression must have at least one arm.

  --> examples/errors/empty_match_error.flx:2:9
  |
2 | let x = match 1 { };
  |         ^^^^^^^^^^^

Hint:
  Add at least one pattern match arm: match value { pattern -> expr; }


--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match is non-exhaustive without an unguarded catch-all arm.

  --> examples/errors/empty_match_error.flx:2:9
  |
2 | let x = match 1 { };
  |         ^^^^^^^^^^^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^
  | -------- expected () -> Unit, found () -> Unit with IO


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 5 errors.
== stdout ==
<not executed>
